<resources>
    <string name="app_name">Focus App</string>
    <string name="title_setting">Setting</string>
    <string name="title_activity">Activity</string>
    <string name="title_focus">Focus</string>
    <string name="title_spinner">Spinner</string>
    <string name="title_collection">Collection</string>
    <string name="title_activity_login">Login to Focus</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="your_web_client_id">"642438296778-ikci804lldlo3sde74pl68a7f0mdn26q.apps.googleusercontent.com"</string>
</resources>