<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/title_setting" />

    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/ic_activity"
        android:title="@string/title_activity" />

    <item
        android:id="@+id/navigation_focus"
        android:icon="@drawable/ic_clock"
        android:title="@string/title_focus" />

    <item
        android:id="@+id/navigation_spinner"
        android:icon="@drawable/ic_spinner"
        android:title="@string/title_spinner" />

    <item
        android:id="@+id/navigation_collection"
        android:icon="@drawable/ic_collection"
        android:title="@string/title_collection" />

</menu>